# rupert

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE  README.md  boxes.hpp  build.sh  cover.hpp  flatbuffers.sh  helper.hpp  main.cpp  main_single.cpp  math.hpp  plot.hpp  polyhedron.hpp  test.hpp
cpp/: .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  flatbuffers.sh  main.cpp  run.sh
cpp/scripts/: build.sh  build_tests.sh  flatbuffers.sh  headers_test.sh  loc.sh  nomnoml.txt  run.sh  run_tests.sh  test_compile.sh
cpp/src/: cover.hpp  export.hpp  flatbuffers.fbs  flatbuffers_test.hpp  pipeline.hpp  test.hpp
cpp/src/box/: angle_box.hpp  box.hpp  boxes.hpp  range.hpp
cpp/src/flatbuffers/: flatbuffers_generated.h
cpp/src/geometry/: convex_hull.hpp  edge.hpp  geometry.hpp  hull.hpp  line.hpp  matrix.hpp  polygon.hpp  polyhedra.hpp  polyhedron.hpp  symmetry.hpp  transformation.hpp  util.hpp  vector.hpp  vector2.hpp  vector3.hpp  vertex.hpp
cpp/src/global_solver/: box_processor.hpp  config.hpp  debug_exporter.hpp  exporter.hpp  geometry_helpers.hpp  global_solver.hpp  helpers.hpp  importer.hpp  io.hpp  pipeline.hpp  terminal_box.hpp
cpp/src/interval/: boost_interval.hpp  float_interval.hpp  interval.hpp  interval_type.hpp  intervals.hpp  mpfi_interval.hpp
cpp/src/local_solver/demo/: double_curve.html  index.html
cpp/src/number/: float_number.hpp  mpfr_number.hpp  number.hpp  number_type.hpp
cpp/src/pipeline/: box.hpp  box_processor.hpp  box_queue.hpp  config.hpp  debug_exporter.hpp  exporter.hpp  id.hpp  importer.hpp  pipeline.hpp  queue.hpp  rectangle.hpp  rectangle_queue.hpp  terminal_box.hpp  terminal_box_queue.hpp
cpp/src/queue/: concurrent_queue.hpp  queue_type.hpp  queues.hpp  serial_queue.hpp  task_type.hpp
cpp/src/range/: range.hpp  range2.hpp  range3.hpp  range_type.hpp  ranges.hpp
cpp/src/space/: box.hpp  box_queue.hpp  id.hpp  rectangle.hpp  rectangle_queue.hpp  space.hpp  terminal_box.hpp  terminal_box_queue.hpp
cpp/src/test/: dummy_test.cpp  interval_test_case.hpp  test.hpp  test_interval.cpp  util.hpp
cpp/src/vector/: interval_vector2.hpp  interval_vector3.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector_2.hpp  vector_3.hpp  vector_type.hpp  vertex.hpp
python/generate/: main.py  polyhedra_code.txt  set_api_key.sh  set_openai_api_key.sh
python/scrape/: main.py  polyhedra.json
python/scrape/data/: 0_Platonic.html  polyhedra.json
python/scrape/polyhedron_data/: 1_Archimedean.html  2_Catalan.html
scripts/: flatbuffers.sh  loc.sh  setup.sh
src/: base.hpp  boxes.hpp  cover.hpp  interval.hpp  plot.hpp  polyhedron.hpp  queue.hpp  test.hpp  util.hpp  vector.hpp
src/data/: data.fbs  data_generated.h
src/geometry/: geometry.hpp  line.hpp  polygon.hpp  polyhedron.hpp  vector_2.hpp  vector_3.hpp  vector_type.hpp
src/interval/: boost_interval.hpp  float_interval.hpp  interval_type.hpp  mpfi_interval.hpp
src/number/: float_number.hpp  mpfr_number.hpp  number_type.hpp
src/vector/: vector.hpp  vector_3.hpp
src_old/: plot.hpp  polyhedron.hpp  test.hpp
web/: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json
web/data/: data_generated.ts
web/data/flat-buffers/: cover.ts  id-interval.ts  id.ts  polygon.ts  polyhedron.ts  vector2.ts  vector3.ts
web/scripts/: check.sh  install.sh  run.sh
web/src/: app.html
web/src/lib/: Geometry.ts  Geometry2.svelte  Geometry3.svelte  Parameter2.svelte  Parameter3.svelte  Parameter3d.svelte  State.svelte.ts  ThreeElement.svelte  ThreeEmbed.svelte  ThreePlot.svelte  Types.ts  geometry.ts  index.ts  loader.ts  serialization.ts  state.svelte.ts  types.ts
web/src/lib/flatbuffers/: flatbuffers_generated.ts
web/src/lib/flatbuffers/flat-buffers/: box.ts  box2.ts  box3.ts  boxes.ts  cover.ts  data.ts  debug.ts  edge.ts  id-interval.ts  id.ts  interval.ts  line.ts  polygon.ts  polyhedron.ts  projection.ts  rectangle.ts  vector.ts  vertex.ts
web/src/lib/loader/: AbstractLoader.ts  DebugLoader.ts  Loader.ts  debug.ts  loader.ts
web/src/lib/plot/: Boxes.svelte  Main.svelte  Projection.svelte  Rectangles.svelte
web/src/lib/plots/: Boxes.svelte  Projection.svelte  Rectangles.svelte
web/src/routes/: +page.svelte
